@@ -324,7 +324,8 @@ wpa_supplicant_pre_start() {
     eoutdent
 
     if ${action} ; then
-	einfo "${iface} configured in the background successfully"
+	local addr=$( interface_get_address "${iface}" )
+	einfo "${iface} configured with address ${addr}"
 	exit 0 
     fi
 
